--- a/e2e/__snapshots__/e2e/uni-app-webpack5/main.wxss
+++ b/e2e/__snapshots__/e2e/uni-app-webpack5/main.wxss
@@ -196,16 +196,16 @@ text,
     max-width: 1536px;
   }
 }
-.bottom-_100px_ {
+.bottom-_b100px_B {
   bottom: 100px;
 }
-.bottom-_100rpx_ {
+.bottom-_b100rpx_B {
   bottom: 100rpx;
 }
-.z-_-55_ {
+.z-_b-55_B {
   z-index: -55;
 }
-.z-_55_ {
+.z-_b55_B {
   z-index: 55;
 }
 .float-right {
@@ -217,13 +217,13 @@ text,
 .float-none {
   float: none;
 }
-.-m-_20px_ {
+.-m-_b20px_B {
   margin: -20px;
 }
 .-mt-2 {
   margin-top: -16rpx;
 }
-.mb-_-20px_ {
+.mb-_b-20px_B {
   margin-bottom: -20px;
 }
 .box-border {
@@ -233,7 +233,7 @@ text,
   box-sizing: content-box;
   box-sizing: initial;
 }
-.ih-5 {
+._eh-5 {
   height: 40rpx !important;
 }
 .h-32 {
@@ -242,19 +242,19 @@ text,
 .h-5 {
   height: 40rpx;
 }
-.h-_100px_ {
+.h-_b100px_B {
   height: 100px;
 }
-.h-_200p_ {
+.h-_b200_v_B {
   height: 200%;
 }
 .h-full {
   height: 100%;
 }
-.max-h-_100px_ {
+.max-h-_b100px_B {
   max-height: 100px;
 }
-.min-h-_100px_ {
+.min-h-_b100px_B {
   min-height: 100px;
 }
 .w-32 {
@@ -263,22 +263,22 @@ text,
 .w-5 {
   width: 40rpx;
 }
-.w-_100px_ {
+.w-_b100px_B {
   width: 100px;
 }
-.w-_100rpx_ {
+.w-_b100rpx_B {
   width: 100rpx;
 }
-.w-_300rpx_ {
+.w-_b300rpx_B {
   width: 300rpx;
 }
 .w-full {
   width: 100%;
 }
-.min-w-_300rpx_ {
+.min-w-_b300rpx_B {
   min-width: 300rpx;
 }
-.max-w-_300rpx_ {
+.max-w-_b300rpx_B {
   max-width: 300rpx;
 }
 .grid-cols-3 {
@@ -290,10 +290,10 @@ text,
 .justify-center {
   justify-content: center;
 }
-.space-y-_1d6rem_ > view + view,
-.space-y-_1d6rem_ > view + text,
-.space-y-_1d6rem_ > text + view,
-.space-y-_1d6rem_ > text + text {
+.space-y-_b1_d6rem_B > view + view,
+.space-y-_b1_d6rem_B > view + text,
+.space-y-_b1_d6rem_B > text + view,
+.space-y-_b1_d6rem_B > text + text {
   --tw-space-y-reverse: 0;
   margin-top: calc(51.2rpx * (1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(51.2rpx * var(--tw-space-y-reverse));
@@ -306,10 +306,10 @@ text,
   border-right-width: calc(1px * var(--tw-divide-x-reverse));
   border-left-width: calc(1px * (1 - var(--tw-divide-x-reverse)));
 }
-.divide-x-_10px_ > view + view,
-.divide-x-_10px_ > view + text,
-.divide-x-_10px_ > text + view,
-.divide-x-_10px_ > text + text {
+.divide-x-_b10px_B > view + view,
+.divide-x-_b10px_B > view + text,
+.divide-x-_b10px_B > text + view,
+.divide-x-_b10px_B > text + text {
   --tw-divide-x-reverse: 0;
   border-right-width: calc(10px * var(--tw-divide-x-reverse));
   border-left-width: calc(10px * (1 - var(--tw-divide-x-reverse)));
@@ -320,10 +320,10 @@ text,
 .divide-solid > text + text {
   border-style: solid;
 }
-.divide-_h010101_ > view + view,
-.divide-_h010101_ > view + text,
-.divide-_h010101_ > text + view,
-.divide-_h010101_ > text + text {
+.divide-_b_h010101_B > view + view,
+.divide-_b_h010101_B > view + text,
+.divide-_b_h010101_B > text + view,
+.divide-_b_h010101_B > text + text {
   --tw-divide-opacity: 1;
   border-color: rgba(1, 1, 1, var(--tw-divide-opacity, 1));
 }
@@ -334,7 +334,7 @@ text,
   --tw-divide-opacity: 1;
   border-color: rgba(34, 197, 94, var(--tw-divide-opacity, 1));
 }
-.rounded-_40px_ {
+.rounded-_b40px_B {
   border-radius: 40px;
 }
 .rounded-md {
@@ -343,13 +343,13 @@ text,
 .border-4 {
   border-width: 4px;
 }
-.border-_10px_ {
+.border-_b10px_B {
   border-width: 10px;
 }
 .border-solid {
   border-style: solid;
 }
-.border-_h098765_ {
+.border-_b_h098765_B {
   --tw-border-opacity: 1;
   border-color: rgba(9, 135, 101, var(--tw-border-opacity, 1));
 }
@@ -361,30 +361,30 @@ text,
   --tw-border-opacity: 1;
   border-color: rgba(74, 222, 128, var(--tw-border-opacity, 1));
 }
-.border-opacity-_0d44_ {
+.border-opacity-_b0_d44_B {
   --tw-border-opacity: 0.44;
 }
-.bg-_h000000_ {
+.bg-_b_h000000_B {
   --tw-bg-opacity: 1;
   background-color: rgba(0, 0, 0, var(--tw-bg-opacity, 1));
 }
-.bg-_h00ff00_ {
+.bg-_b_h00ff00_B {
   --tw-bg-opacity: 1;
   background-color: rgba(0, 255, 0, var(--tw-bg-opacity, 1));
 }
-.bg-_h123456_ {
+.bg-_b_h123456_B {
   --tw-bg-opacity: 1;
   background-color: rgba(18, 52, 86, var(--tw-bg-opacity, 1));
 }
-.bg-_hdddddd_ {
+.bg-_b_hdddddd_B {
   --tw-bg-opacity: 1;
   background-color: rgba(221, 221, 221, var(--tw-bg-opacity, 1));
 }
-.bg-_hfafa00_ {
+.bg-_b_hfafa00_B {
   --tw-bg-opacity: 1;
   background-color: rgba(250, 250, 0, var(--tw-bg-opacity, 1));
 }
-.bg-_hff0000_ {
+.bg-_b_hff0000_B {
   --tw-bg-opacity: 1;
   background-color: rgba(255, 0, 0, var(--tw-bg-opacity, 1));
 }
@@ -412,10 +412,10 @@ text,
   --tw-bg-opacity: 1;
   background-color: rgba(127, 29, 29, var(--tw-bg-opacity, 1));
 }
-.bg-opacity-_0d54_ {
+.bg-opacity-_b0_d54_B {
   --tw-bg-opacity: 0.54;
 }
-.bg-_urlyqhttpscssxxxdcomsxxdwebpqy_ {
+.bg-_burl_p_ahttps_c_f_fxxx_dcom_fxx_dwebp_a_P_B {
   background-image: url(https://xxx.com/xx.webp);
 }
 .bg-gradient-to-b {
@@ -436,20 +436,20 @@ text,
 .p-4 {
   padding: 32rpx;
 }
-.p-_20px_ {
+.p-_b20px_B {
   padding: 20px;
 }
 .py-2 {
   padding-top: 16rpx;
   padding-bottom: 16rpx;
 }
-.text-_20px_ {
+.text-_b20px_B {
   font-size: 20px;
 }
-.text-_22px_ {
+.text-_b22px_B {
   font-size: 22px;
 }
-.text-_30rpx_ {
+.text-_b30rpx_B {
   font-size: 30rpx;
 }
 .text-sm {
@@ -459,26 +459,26 @@ text,
 .font-semibold {
   font-weight: 600;
 }
-.leading-_0d9_ {
+.leading-_b0_d9_B {
   line-height: 0.9;
 }
-.text-_h132323_ {
+.text-_b_h132323_B {
   --tw-text-opacity: 1;
   color: rgba(19, 35, 35, var(--tw-text-opacity, 1));
 }
-.text-_h898989_ {
+.text-_b_h898989_B {
   --tw-text-opacity: 1;
   color: rgba(137, 137, 137, var(--tw-text-opacity, 1));
 }
-.text-_hdddddd_ {
+.text-_b_hdddddd_B {
   --tw-text-opacity: 1;
   color: rgba(221, 221, 221, var(--tw-text-opacity, 1));
 }
-.text-_hfafafa_ {
+.text-_b_hfafafa_B {
   --tw-text-opacity: 1;
   color: rgba(250, 250, 250, var(--tw-text-opacity, 1));
 }
-.text-_hffffff_ {
+.text-_b_hffffff_B {
   --tw-text-opacity: 1;
   color: rgba(255, 255, 255, var(--tw-text-opacity, 1));
 }
@@ -493,7 +493,7 @@ text,
   --tw-text-opacity: 1;
   color: rgba(255, 255, 255, var(--tw-text-opacity, 1));
 }
-.text-opacity-_0d19_ {
+.text-opacity-_b0_d19_B {
   --tw-text-opacity: 0.19;
 }
 .shadow {
@@ -508,15 +508,15 @@ text,
   --tw-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
   --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
 }
-.shadow-_0px_2px_11px_0px_h00000a_ {
+.shadow-_b0px_2px_11px_0px__h00000a_B {
   --tw-shadow: 0px 2px 11px 0px #00000a;
   --tw-shadow-colored: 0px 2px 11px 0px var(--tw-shadow-color);
 }
-.shadow-_0px_2px_11px_0px_h00000a_,
-.shadow-_0px_2px_11px_0px_rgbay0b0b0b0d4y_ {
+.shadow-_b0px_2px_11px_0px__h00000a_B,
+.shadow-_b0px_2px_11px_0px_rgba_p0_m0_m0_m0_d4_P_B {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 rgba(0, 0, 0, 0)), var(--tw-ring-shadow, 0 0 rgba(0, 0, 0, 0)), var(--tw-shadow);
 }
-.shadow-_0px_2px_11px_0px_rgbay0b0b0b0d4y_ {
+.shadow-_b0px_2px_11px_0px_rgba_p0_m0_m0_m0_d4_P_B {
   --tw-shadow: 0px 2px 11px 0px rgba(0, 0, 0, 0.4);
   --tw-shadow-colored: 0px 2px 11px 0px var(--tw-shadow-color);
 }
@@ -592,20 +592,20 @@ text,
 .aaa {
   color: red;
 }
-.beforeccontent-_qhelloq_:before {
+.before_ccontent-_b_ahello_a_B:before {
   --tw-content: 'hello';
   content: var(--tw-content);
 }
-.beforecblock:before {
+.before_cblock:before {
   content: var(--tw-content);
   display: block;
 }
-.afterccontent-_qu8fd9u662fclassArraybu7528u4e8eu6d4bu8bd5u52a8u6001jsu7ed1u5b9aclassq_:after {
+.after_ccontent-_b_au8fd9u662fclassArray_mu7528u4e8eu6d4bu8bd5u52a8u6001jsu7ed1u5b9aclass_a_B:after {
   --tw-content: '这是classArray,用于测试动态js绑定class';
   content: var(--tw-content);
 }
-.ifdef-_MP-WEIXIN_cbg-blue-500,
-.wxcbg-blue-500 {
+.ifdef-_bMP-WEIXIN_B_cbg-blue-500,
+.wx_cbg-blue-500 {
   --tw-bg-opacity: 1;
   background-color: rgba(59, 130, 246, var(--tw-bg-opacity, 1));
 }
