--- a/e2e/__snapshots__/native/vite-native/page.wxml
+++ b/e2e/__snapshots__/native/vite-native/page.wxml
@@ -1,19 +1,19 @@
 <scroll-view scroll-y="" type="list" enable-back-to-top="">
-  <view class="space-y-2d5">
-    <view class="bg-_h68c828_ text-_100px_ text-_h123456_ w-_323px_ h-_30px_">111</view>
-    <view class="bg-_h3a32d1_ text-_100rpx_ text-red-700 w-_323px_ h-_45px_">222</view>
-    <view class="bg-gradient-to-b from-_h2f73f1_ to-_h4bcefd_ w-_323px_ h-_30px_"></view>
-    <view class="bg-gradient-to-t from-_h2f73f1_ to-_h4bcefd_ w-_323px_ h-_30px_"></view>
-    <view class="bg-gradient-to-tr from-_h2f73f1_ to-_h4bcefd_ w-_323px_ h-_30px_"></view>
-    <view class="space-x-2d5">
-      <view class="inline-block h-10 w-_50px_ bg-amber-300 border-4"></view>
-      <view class="inline-block h-10 w-_50px_ bg-amber-300"></view>
-      <view class="inline-block h-10 w-_50px_ bg-amber-300"></view>
-      <view class="inline-block h-10 w-_50px_ bg-amber-300"></view>
+  <view class="space-y-2_d5">
+    <view class="bg-_b_h68c828_B text-_b100px_B text-_b_h123456_B w-_b323px_B h-_b30px_B">111</view>
+    <view class="bg-_b_h3a32d1_B text-_b100rpx_B text-red-700 w-_b323px_B h-_b45px_B">222</view>
+    <view class="bg-gradient-to-b from-_b_h2f73f1_B to-_b_h4bcefd_B w-_b323px_B h-_b30px_B"></view>
+    <view class="bg-gradient-to-t from-_b_h2f73f1_B to-_b_h4bcefd_B w-_b323px_B h-_b30px_B"></view>
+    <view class="bg-gradient-to-tr from-_b_h2f73f1_B to-_b_h4bcefd_B w-_b323px_B h-_b30px_B"></view>
+    <view class="space-x-2_d5">
+      <view class="inline-block h-10 w-_b50px_B bg-amber-300 border-4"></view>
+      <view class="inline-block h-10 w-_b50px_B bg-amber-300"></view>
+      <view class="inline-block h-10 w-_b50px_B bg-amber-300"></view>
+      <view class="inline-block h-10 w-_b50px_B bg-amber-300"></view>
     </view>
     <view class="i-mdi-home"></view>
-    <view class="hovercborder-blue-200s20">111</view>
-    <view class="size-12 bg-blue-500s30 text-pink-300">BLUE BLOCK</view>
-    <view class="min-h-screen flex flex-col p-4 bg-zinc-50 darkcbg-zinc-900"><view class="darkchovercbg-green-300">Test</view></view>
+    <view class="hover_cborder-blue-200_f20">111</view>
+    <view class="size-12 bg-blue-500_f30 text-pink-300">BLUE BLOCK</view>
+    <view class="min-h-screen flex flex-col p-4 bg-zinc-50 dark_cbg-zinc-900"><view class="dark_chover_cbg-green-300">Test</view></view>
   </view>
 </scroll-view>
