--- a/e2e/__snapshots__/e2e/mpx-app/page.wxml
+++ b/e2e/__snapshots__/e2e/mpx-app/page.wxml
@@ -1,17 +1,17 @@
 <view>
-  <view class="text-_h123456_ text-_h123456_ text-_50px_ text-_50px_ bg-_hfff_ bg-_hfff_">对酒当歌，人生几何</view>
-  <view class="bg-_urlyqhttpscssxxxdcomsxxdwebpqy_ bg-_urlyqhttpscssxxxdcomsxxdwebpqy_">bgUrl</view>
-  <view class="after_c_content-_bl__dq_ after_c_content-_bl__dq_ _dq__br_ _dq__br_ aftercml-0d5 aftercml-0d5 afterctext-red-500 afterctext-red-500"></view>
+  <view class="text-_b_h123456_B text-_b_h123456_B text-_b50px_B text-_b50px_B bg-_b_hfff_B bg-_b_hfff_B">对酒当歌，人生几何</view>
+  <view class="bg-_burl_p_ahttps_c_f_fxxx_dcom_fxx_dwebp_a_P_B bg-_burl_p_ahttps_c_f_fxxx_dcom_fxx_dwebp_a_P_B">bgUrl</view>
+  <view class="after_c_content-_bl__dq_ after_c_content-_bl__dq_ _dq__br_ _dq__br_ after_cml-0_d5 after_cml-0_d5 after_ctext-red-500 after_ctext-red-500"></view>
   <view
-    class="afterccontent-_qu4f60u597du554auff0cu6211u8fd9u662fu4e2du6587u5b57u7b26u4e32q_ afterccontent-_qu4f60u597du554auff0cu6211u8fd9u662fu4e2du6587u5b57u7b26u4e32q_ aftercml-0d5 aftercml-0d5 afterctext-red-500 afterctext-red-500"></view>
+    class="after_ccontent-_b_au4f60u597du554auff0cu6211u8fd9u662fu4e2du6587u5b57u7b26u4e32_a_B after_ccontent-_b_au4f60u597du554auff0cu6211u8fd9u662fu4e2du6587u5b57u7b26u4e32_a_B after_cml-0_d5 after_cml-0_d5 after_ctext-red-500 after_ctext-red-500"></view>
   <view>*****</view>
-  <view style="color: red; font-size: 16px; font-weight: bold"><view class="bg-_h929292_ bg-_h929292_" style="color: blue; font-size: 14px">111112222</view></view>
+  <view style="color: red; font-size: 16px; font-weight: bold"><view class="bg-_b_h929292_B bg-_b_h929292_B" style="color: blue; font-size: 14px">111112222</view></view>
   <view style="color: blue; font-size: 14px; background-color: red">222222</view>
   <list is="components/listb85648da/index">
     <view class="flex listb85648da-index--flex flex-col listb85648da-index--flex-col">
-      <view class="text-_blue_ listb85648da-index--text-_blue_">手机</view>
-      <view class="text-_he67240_ listb85648da-index--text-_he67240_">电视</view>
-      <view class="text-_blue_ listb85648da-index--text-_blue_">电脑</view>
+      <view class="text-_bblue_B listb85648da-index--text-_bblue_B">手机</view>
+      <view class="text-_b_he67240_B listb85648da-index--text-_b_he67240_B">电视</view>
+      <view class="text-_bblue_B listb85648da-index--text-_bblue_B">电脑</view>
     </view>
   </list>
   <button
