--- a/e2e/__snapshots__/e2e/native-mina/app.wxss
+++ b/e2e/__snapshots__/e2e/native-mina/app.wxss
@@ -115,10 +115,10 @@ text,
   --tw-contain-paint: ;
   --tw-contain-style: ;
 }
-.-m-_20px_ {
+.-m-_b20px_B {
   margin: -20px;
 }
-.m-_20px_ {
+.m-_b20px_B {
   margin: 20px;
 }
 .mx-auto {
@@ -128,7 +128,7 @@ text,
 .-mt-2 {
   margin-top: -16rpx;
 }
-.mb-_-20px_ {
+.mb-_b-20px_B {
   margin-bottom: -20px;
 }
 .flex {
@@ -146,22 +146,22 @@ text,
 .h-24 {
   height: 192rpx;
 }
-.h-_100px_ {
+.h-_b100px_B {
   height: 100px;
 }
-.h-_200p_ {
+.h-_b200_v_B {
   height: 200%;
 }
-.h-_25rpx_ {
+.h-_b25rpx_B {
   height: 25rpx;
 }
-.h-_50rpx_ {
+.h-_b50rpx_B {
   height: 50rpx;
 }
-.max-h-_100px_ {
+.max-h-_b100px_B {
   max-height: 100px;
 }
-.min-h-_100px_ {
+.min-h-_b100px_B {
   min-height: 100px;
 }
 .w-10 {
@@ -173,28 +173,28 @@ text,
 .w-32 {
   width: 256rpx;
 }
-.w-_100px_ {
+.w-_b100px_B {
   width: 100px;
 }
-.w-_100rpx_ {
+.w-_b100rpx_B {
   width: 100rpx;
 }
-.w-_200rpx_ {
+.w-_b200rpx_B {
   width: 200rpx;
 }
-.w-_20px_ {
+.w-_b20px_B {
   width: 20px;
 }
-.w-_20rpx_ {
+.w-_b20rpx_B {
   width: 20rpx;
 }
-.w-_300rpx_ {
+.w-_b300rpx_B {
   width: 300rpx;
 }
-.min-w-_300rpx_ {
+.min-w-_b300rpx_B {
   min-width: 300rpx;
 }
-.max-w-_300rpx_ {
+.max-w-_b300rpx_B {
   max-width: 300rpx;
 }
 .grid-cols-3 {
@@ -206,18 +206,18 @@ text,
 .justify-center {
   justify-content: center;
 }
-.space-y-_1d6rem_ > view + view,
-.space-y-_1d6rem_ > view + text,
-.space-y-_1d6rem_ > text + view,
-.space-y-_1d6rem_ > text + text {
+.space-y-_b1_d6rem_B > view + view,
+.space-y-_b1_d6rem_B > view + text,
+.space-y-_b1_d6rem_B > text + view,
+.space-y-_b1_d6rem_B > text + text {
   --tw-space-y-reverse: 0;
   margin-top: calc(51.2rpx * (1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(51.2rpx * var(--tw-space-y-reverse));
 }
-.divide-x-_10px_ > view + view,
-.divide-x-_10px_ > view + text,
-.divide-x-_10px_ > text + view,
-.divide-x-_10px_ > text + text {
+.divide-x-_b10px_B > view + view,
+.divide-x-_b10px_B > view + text,
+.divide-x-_b10px_B > text + view,
+.divide-x-_b10px_B > text + text {
   --tw-divide-x-reverse: 0;
   border-right-width: calc(10px * var(--tw-divide-x-reverse));
   border-left-width: calc(10px * (1 - var(--tw-divide-x-reverse)));
@@ -228,14 +228,14 @@ text,
 .divide-solid > text + text {
   border-style: solid;
 }
-.divide-_h010101_ > view + view,
-.divide-_h010101_ > view + text,
-.divide-_h010101_ > text + view,
-.divide-_h010101_ > text + text {
+.divide-_b_h010101_B > view + view,
+.divide-_b_h010101_B > view + text,
+.divide-_b_h010101_B > text + view,
+.divide-_b_h010101_B > text + text {
   --tw-divide-opacity: 1;
   border-color: rgba(1, 1, 1, var(--tw-divide-opacity, 1));
 }
-.rounded-_40px_ {
+.rounded-_b40px_B {
   border-radius: 40px;
 }
 .rounded-full {
@@ -247,28 +247,28 @@ text,
 .border-0 {
   border-width: 0px;
 }
-.border-_10px_ {
+.border-_b10px_B {
   border-width: 10px;
 }
 .border-solid {
   border-style: solid;
 }
-.border-_h098765_ {
+.border-_b_h098765_B {
   --tw-border-opacity: 1;
   border-color: rgba(9, 135, 101, var(--tw-border-opacity, 1));
 }
-.border-opacity-_0d44_ {
+.border-opacity-_b0_d44_B {
   --tw-border-opacity: 0.44;
 }
-.bg-_h123456_ {
+.bg-_b_h123456_B {
   --tw-bg-opacity: 1;
   background-color: rgba(18, 52, 86, var(--tw-bg-opacity, 1));
 }
-.bg-_h654123_ {
+.bg-_b_h654123_B {
   --tw-bg-opacity: 1;
   background-color: rgba(101, 65, 35, var(--tw-bg-opacity, 1));
 }
-.bg-_rgbay255b255b255b1y_ {
+.bg-_brgba_p255_m255_m255_m1_P_B {
   background-color: rgba(255, 255, 255, 1);
 }
 .bg-gray-100 {
@@ -291,13 +291,13 @@ text,
   --tw-bg-opacity: 1;
   background-color: rgba(3, 105, 161, var(--tw-bg-opacity, 1));
 }
-.bg-opacity-_0d54_ {
+.bg-opacity-_b0_d54_B {
   --tw-bg-opacity: 0.54;
 }
-.bg-_urlyqhttpscssxxxdcomsxxdwebpqy_ {
+.bg-_burl_p_ahttps_c_f_fxxx_dcom_fxx_dwebp_a_P_B {
   background-image: url('https://xxx.com/xx.webp');
 }
-.p-_20px_ {
+.p-_b20px_B {
   padding: 20px;
 }
 .px-4 {
@@ -308,27 +308,27 @@ text,
   padding-top: 16rpx;
   padding-bottom: 16rpx;
 }
-.text-_20px_ {
+.text-_b20px_B {
   font-size: 20px;
 }
-.text-_50px_ {
+.text-_b50px_B {
   font-size: 50px;
 }
 .font-semibold {
   font-weight: 600;
 }
-.leading-_0d9_ {
+.leading-_b0_d9_B {
   line-height: 0.9;
 }
-.text-_h654321_ {
+.text-_b_h654321_B {
   --tw-text-opacity: 1;
   color: rgba(101, 67, 33, var(--tw-text-opacity, 1));
 }
-.text-_hdddddd_ {
+.text-_b_hdddddd_B {
   --tw-text-opacity: 1;
   color: rgba(221, 221, 221, var(--tw-text-opacity, 1));
 }
-.text-_hffffff_ {
+.text-_b_hffffff_B {
   --tw-text-opacity: 1;
   color: rgba(255, 255, 255, var(--tw-text-opacity, 1));
 }
@@ -340,7 +340,7 @@ text,
   --tw-text-opacity: 1;
   color: rgba(255, 255, 255, var(--tw-text-opacity, 1));
 }
-.text-opacity-_0d19_ {
+.text-opacity-_b0_d19_B {
   --tw-text-opacity: 0.19;
 }
 .ring-4 {
@@ -365,25 +365,25 @@ text,
   box-sizing: border-box;
 }
 @media (min-width: 640px) {
-  .smcpx-8 {
+  .sm_cpx-8 {
     padding-left: 64rpx;
     padding-right: 64rpx;
   }
-  .smcpy-3 {
+  .sm_cpy-3 {
     padding-top: 24rpx;
     padding-bottom: 24rpx;
   }
 }
 @media (prefers-color-scheme: dark) {
-  .darkcbg-_h487512_ {
+  .dark_cbg-_b_h487512_B {
     --tw-bg-opacity: 1;
     background-color: rgba(72, 117, 18, var(--tw-bg-opacity, 1));
   }
-  .darkcbg-_habcdef_ {
+  .dark_cbg-_b_habcdef_B {
     --tw-bg-opacity: 1;
     background-color: rgba(171, 205, 239, var(--tw-bg-opacity, 1));
   }
-  .darkcbg-zinc-800 {
+  .dark_cbg-zinc-800 {
     --tw-bg-opacity: 1;
     background-color: rgba(39, 39, 42, var(--tw-bg-opacity, 1));
   }
