--- a/e2e/__snapshots__/e2e/rax-app/page.wxml
+++ b/e2e/__snapshots__/e2e/rax-app/page.wxml
@@ -1,8 +1,10 @@
 <view data-private-node-id="e-body-pages/index/index-2" style="">
   <view class="h5-div" data-private-node-id="n_40" style="">
     <view class="h5-div rax-view-v2" data-private-node-id="n_41" style="">****</view>
-    <view class="h5-div rax-view-v2 bg-_h123456_ text-_hfff_ bg-_urlyqhttpscssxxxdcomsxxdwebpqy_ text-_50px_ h-_100px_" data-private-node-id="n_43" style="">clsx</view>
-    <view class="h5-div rax-view-v2 bg-_h654321_ darkcbg-_h666555_ h-10 w-10" data-private-node-id="n_45" style=""></view>
+    <view class="h5-div rax-view-v2 bg-_b_h123456_B text-_b_hfff_B bg-_burl_p_ahttps_c_f_fxxx_dcom_fxx_dwebp_a_P_B text-_b50px_B h-_b100px_B" data-private-node-id="n_43" style="">
+      clsx
+    </view>
+    <view class="h5-div rax-view-v2 bg-_b_h654321_B dark_cbg-_b_h666555_B h-10 w-10" data-private-node-id="n_45" style=""></view>
     <view class="h5-div rax-view-v2 index--homeContainer--npg8wSy" data-private-node-id="n_46" style="">
       <image
         class="h5-img Logo--logo--x8fxjJl"
@@ -15,23 +17,25 @@
       <text class="rax-text-v2 index--homeInfo--Kmw_BNe" data-private-node-id="n_50" space="" style=""></text>
       <text class="rax-text-v2 index--homeInfo--Kmw_BNe" data-private-node-id="n_52" space="" style=""></text>
     </view>
-    <view class="h5-div rax-view-v2 p-_20px_ -mt-2 mb-_-20px_" data-private-node-id="n_54" style="">p-_20px_ -mt-2 mb-_-20px_ margin的jit 可不能这么写 -m-_20px_</view>
-    <view class="h5-div rax-view-v2 space-y-_1d6rem_ w-_200p_" data-private-node-id="n_56" style="">
-      <view class="h5-div rax-view-v2 w-_300rpx_ text-black text-opacity-_0d19_" data-private-node-id="n_57" style="">w-_300rpx_ text-black text-opacity-_0d19_</view>
-      <view class="h5-div rax-view-v2 min-w-_300rpx_ max-h-_100px_ text-_20px_ leading-_0d9_" data-private-node-id="n_59" style="">
-        min-w-_300rpx_ max-h-_100px_ text-_20px_ leading-_0d9_
+    <view class="h5-div rax-view-v2 p-_b20px_B -mt-2 mb-_b-20px_B" data-private-node-id="n_54" style="">p-_b20px_B -mt-2 mb-_b-20px_B margin的jit 可不能这么写 -m-_b20px_B</view>
+    <view class="h5-div rax-view-v2 space-y-_b1_d6rem_B w-_b200_v_B" data-private-node-id="n_56" style="">
+      <view class="h5-div rax-view-v2 w-_b300rpx_B text-black text-opacity-_b0_d19_B" data-private-node-id="n_57" style="">w-_b300rpx_B text-black text-opacity-_b0_d19_B</view>
+      <view class="h5-div rax-view-v2 min-w-_b300rpx_B max-h-_b100px_B text-_b20px_B leading-_b0_d9_B" data-private-node-id="n_59" style="">
+        min-w-_b300rpx_B max-h-_b100px_B text-_b20px_B leading-_b0_d9_B
       </view>
-      <view class="h5-div rax-view-v2 max-w-_300rpx_ min-h-_100px_ text-_hdddddd_" data-private-node-id="n_61" style="">max-w-_300rpx_ min-h-_100px_ text-_hdddddd_</view>
+      <view class="h5-div rax-view-v2 max-w-_b300rpx_B min-h-_b100px_B text-_b_hdddddd_B" data-private-node-id="n_61" style="">
+        max-w-_b300rpx_B min-h-_b100px_B text-_b_hdddddd_B
+      </view>
       <view
-        class="h5-div rax-view-v2 flex items-center justify-center h-_100px_ w-_100px_ rounded-_40px_ bg-_h123456_ bg-opacity-_0d54_ text-_hffffff_"
+        class="h5-div rax-view-v2 flex items-center justify-center h-_b100px_B w-_b100px_B rounded-_b40px_B bg-_b_h123456_B bg-opacity-_b0_d54_B text-_b_hffffff_B"
         data-private-node-id="n_63"
         style="">
         Hello
       </view>
-      <view class="h5-div rax-view-v2 iborder-_10px_ iborder-_h098765_ iborder-solid iborder-opacity-_0d44_" data-private-node-id="n_65" style="">
-        iborder-_10px_ iborder-_h098765_ iborder-solid iborder-opacity-_0d44_
+      <view class="h5-div rax-view-v2 _eborder-_b10px_B _eborder-_b_h098765_B _eborder-solid _eborder-opacity-_b0_d44_B" data-private-node-id="n_65" style="">
+        _eborder-_b10px_B _eborder-_b_h098765_B _eborder-solid _eborder-opacity-_b0_d44_B
       </view>
-      <view class="h5-div rax-view-v2 grid grid-cols-3 divide-x-_10px_ divide-_h010101_ divide-solid" data-private-node-id="n_67" style="">
+      <view class="h5-div rax-view-v2 grid grid-cols-3 divide-x-_b10px_B divide-_b_h010101_B divide-solid" data-private-node-id="n_67" style="">
         <view class="h5-div rax-view-v2" data-private-node-id="n_68" style="">1</view>
         <view class="h5-div rax-view-v2" data-private-node-id="n_70" style="">2</view>
         <view class="h5-div rax-view-v2" data-private-node-id="n_72" style="">3</view>
