--- a/e2e/__snapshots__/e2e/taro-app/app.wxss
+++ b/e2e/__snapshots__/e2e/taro-app/app.wxss
@@ -224,13 +224,13 @@ text,
 .relative {
   position: relative;
 }
-.-m-_20px_ {
+.-m-_b20px_B {
   margin: -20rpx;
 }
 .-mt-2 {
   margin-top: -16rpx;
 }
-.mb-_-20px_ {
+.mb-_b-20px_B {
   margin-bottom: -20rpx;
 }
 .flex {
@@ -251,22 +251,22 @@ text,
 .h-14 {
   height: 112rpx;
 }
-.h-_100px_ {
+.h-_b100px_B {
   height: 100rpx;
 }
-.h-_10px_ {
+.h-_b10px_B {
   height: 10rpx;
 }
-.h-_20px_ {
+.h-_b20px_B {
   height: 20rpx;
 }
-.h-_337px_ {
+.h-_b337px_B {
   height: 337rpx;
 }
-.max-h-_100px_ {
+.max-h-_b100px_B {
   max-height: 100rpx;
 }
-.min-h-_100px_ {
+.min-h-_b100px_B {
   min-height: 100rpx;
 }
 .w-10 {
@@ -278,28 +278,28 @@ text,
 .w-32 {
   width: 256rpx;
 }
-.w-_100px_ {
+.w-_b100px_B {
   width: 100rpx;
 }
-.w-_200p_ {
+.w-_b200_v_B {
   width: 200%;
 }
-.w-_20px_ {
+.w-_b20px_B {
   width: 20rpx;
 }
-.w-_300rpx_ {
+.w-_b300rpx_B {
   width: 300rpx;
 }
-.w-_404px_ {
+.w-_b404px_B {
   width: 404rpx;
 }
 .w-full {
   width: 100%;
 }
-.min-w-_300rpx_ {
+.min-w-_b300rpx_B {
   min-width: 300rpx;
 }
-.max-w-_300rpx_ {
+.max-w-_b300rpx_B {
   max-width: 300rpx;
 }
 .rotate-45 {
@@ -327,18 +327,18 @@ text,
   -ms-flex-pack: center;
   justify-content: center;
 }
-.space-y-_1d6rem_ > view + view,
-.space-y-_1d6rem_ > view + text,
-.space-y-_1d6rem_ > text + view,
-.space-y-_1d6rem_ > text + text {
+.space-y-_b1_d6rem_B > view + view,
+.space-y-_b1_d6rem_B > view + text,
+.space-y-_b1_d6rem_B > text + view,
+.space-y-_b1_d6rem_B > text + text {
   --tw-space-y-reverse: 0;
   margin-bottom: calc(51.2rpx * var(--tw-space-y-reverse));
   margin-top: calc(51.2rpx * (1 - var(--tw-space-y-reverse)));
 }
-.divide-x-_10px_ > view + view,
-.divide-x-_10px_ > view + text,
-.divide-x-_10px_ > text + view,
-.divide-x-_10px_ > text + text {
+.divide-x-_b10px_B > view + view,
+.divide-x-_b10px_B > view + text,
+.divide-x-_b10px_B > text + view,
+.divide-x-_b10px_B > text + text {
   --tw-divide-x-reverse: 0;
   border-left-width: calc(10rpx * (1 - var(--tw-divide-x-reverse)));
   border-right-width: calc(10rpx * var(--tw-divide-x-reverse));
@@ -349,67 +349,67 @@ text,
 .divide-solid > text + text {
   border-style: solid;
 }
-.divide-_h010101_ > view + view,
-.divide-_h010101_ > view + text,
-.divide-_h010101_ > text + view,
-.divide-_h010101_ > text + text {
+.divide-_b_h010101_B > view + view,
+.divide-_b_h010101_B > view + text,
+.divide-_b_h010101_B > text + view,
+.divide-_b_h010101_B > text + text {
   --tw-divide-opacity: 1;
   border-color: rgba(1, 1, 1, var(--tw-divide-opacity, 1));
 }
-.rounded-_20rpx_ {
+.rounded-_b20rpx_B {
   border-radius: 20rpx;
 }
-.rounded-_40px_ {
+.rounded-_b40px_B {
   border-radius: 40rpx;
 }
 .rounded-md {
   border-radius: 12rpx;
 }
-.border-_10px_ {
+.border-_b10px_B {
   border-width: 10rpx;
 }
 .border-solid {
   border-style: solid;
 }
-.border-_h098765_ {
+.border-_b_h098765_B {
   --tw-border-opacity: 1;
   border-color: rgba(9, 135, 101, var(--tw-border-opacity, 1));
 }
-.border-opacity-_0d44_ {
+.border-opacity-_b0_d44_B {
   --tw-border-opacity: 0.44;
 }
-.bg-_h123456_ {
+.bg-_b_h123456_B {
   --tw-bg-opacity: 1;
   background-color: rgba(18, 52, 86, var(--tw-bg-opacity, 1));
 }
-.bg-_h123_ {
+.bg-_b_h123_B {
   --tw-bg-opacity: 1;
   background-color: rgba(17, 34, 51, var(--tw-bg-opacity, 1));
 }
-.bg-_h3232ff_ {
+.bg-_b_h3232ff_B {
   --tw-bg-opacity: 1;
   background-color: rgba(50, 50, 255, var(--tw-bg-opacity, 1));
 }
-.bg-_h654321_ {
+.bg-_b_h654321_B {
   --tw-bg-opacity: 1;
   background-color: rgba(101, 67, 33, var(--tw-bg-opacity, 1));
 }
-.bg-_h91ba306d_ {
+.bg-_b_h91ba306d_B {
   background-color: rgba(145, 186, 48, 0.42745);
 }
-.bg-_hd6d66b_ {
+.bg-_b_hd6d66b_B {
   --tw-bg-opacity: 1;
   background-color: rgba(214, 214, 107, var(--tw-bg-opacity, 1));
 }
-.bg-_hfaf_ {
+.bg-_b_hfaf_B {
   --tw-bg-opacity: 1;
   background-color: rgba(255, 170, 255, var(--tw-bg-opacity, 1));
 }
-.bg-_hfff_ {
+.bg-_b_hfff_B {
   --tw-bg-opacity: 1;
   background-color: rgba(255, 255, 255, var(--tw-bg-opacity, 1));
 }
-.bg-_url_ {
+.bg-_burl_B {
   background-color: url;
 }
 .bg-gray-100 {
@@ -428,16 +428,16 @@ text,
   --tw-bg-opacity: 1;
   background-color: rgba(239, 68, 68, var(--tw-bg-opacity, 1));
 }
-.bg-sky-500s80 {
+.bg-sky-500_f80 {
   background-color: rgba(14, 165, 233, 0.8);
 }
-.bg-opacity-_0d54_ {
+.bg-opacity-_b0_d54_B {
   --tw-bg-opacity: 0.54;
 }
-.bg-_urlyqhttpscssxxxdcomsxxdwebpqy_ {
+.bg-_burl_p_ahttps_c_f_fxxx_dcom_fxx_dwebp_a_P_B {
   background-image: url(https://xxx.com/xx.webp);
 }
-.bg-_urlyqhttpscssyyydcomsxxdwebpqy_ {
+.bg-_burl_p_ahttps_c_f_fyyy_dcom_fxx_dwebp_a_P_B {
   background-image: url(https://yyy.com/xx.webp);
 }
 .bg-gradient-to-r {
@@ -486,14 +486,14 @@ text,
 .bg-no-repeat {
   background-repeat: no-repeat;
 }
-.p-_20px_ {
+.p-_b20px_B {
   padding: 20rpx;
 }
-.px-_33d89080980rpx_ {
+.px-_b33_d89080980rpx_B {
   padding-left: 33.8908098rpx;
   padding-right: 33.8908098rpx;
 }
-.px-_95px_ {
+.px-_b95px_B {
   padding-left: 95rpx;
   padding-right: 95rpx;
 }
@@ -501,58 +501,58 @@ text,
   padding-bottom: 16rpx;
   padding-top: 16rpx;
 }
-.py-_32d8989989rpx_ {
+.py-_b32_d8989989rpx_B {
   padding-bottom: 32.8989989rpx;
   padding-top: 32.8989989rpx;
 }
-.py-_62px_ {
+.py-_b62px_B {
   padding-bottom: 62rpx;
   padding-top: 62rpx;
 }
-.text-_16px_ {
+.text-_b16px_B {
   font-size: 16rpx;
 }
-.text-_20px_ {
+.text-_b20px_B {
   font-size: 20rpx;
 }
-.text-_50px_ {
+.text-_b50px_B {
   font-size: 50rpx;
 }
 .font-semibold {
   font-weight: 600;
 }
-.leading-_0d9_ {
+.leading-_b0_d9_B {
   line-height: 0.9;
 }
-.itext-_h555_ {
+._etext-_b_h555_B {
   --tw-text-opacity: 1 !important;
   color: rgba(85, 85, 85, var(--tw-text-opacity, 1)) !important;
 }
-.text-_h123456_ {
+.text-_b_h123456_B {
   --tw-text-opacity: 1;
   color: rgba(18, 52, 86, var(--tw-text-opacity, 1));
 }
-.text-_h564564_ {
+.text-_b_h564564_B {
   --tw-text-opacity: 1;
   color: rgba(86, 69, 100, var(--tw-text-opacity, 1));
 }
-.text-_h66ffff_ {
+.text-_b_h66ffff_B {
   --tw-text-opacity: 1;
   color: rgba(102, 255, 255, var(--tw-text-opacity, 1));
 }
-.text-_hdddddd_ {
+.text-_b_hdddddd_B {
   --tw-text-opacity: 1;
   color: rgba(221, 221, 221, var(--tw-text-opacity, 1));
 }
-.text-_hfa0000_ {
+.text-_b_hfa0000_B {
   --tw-text-opacity: 1;
   color: rgba(250, 0, 0, var(--tw-text-opacity, 1));
 }
-.text-_hfa00aa_ {
+.text-_b_hfa00aa_B {
   --tw-text-opacity: 1;
   color: rgba(250, 0, 170, var(--tw-text-opacity, 1));
 }
-.text-_hffffff_ {
+.text-_b_hffffff_B {
   --tw-text-opacity: 1;
   color: rgba(255, 255, 255, var(--tw-text-opacity, 1));
 }
@@ -564,7 +564,7 @@ text,
   --tw-text-opacity: 1;
   color: rgba(255, 255, 255, var(--tw-text-opacity, 1));
 }
-.text-opacity-_0d19_ {
+.text-opacity-_b0_d19_B {
   --tw-text-opacity: 0.19;
 }
 .shadow-md {
@@ -583,100 +583,100 @@ text,
   --tw-ring-opacity: 1;
   --tw-ring-color: rgba(249, 168, 212, var(--tw-ring-opacity, 1));
 }
-.beforecabsolute::before {
+.before_cabsolute::before {
   content: var(--tw-content);
   position: absolute;
 }
-.beforecinset-0::before {
+.before_cinset-0::before {
   content: var(--tw-content);
   top: 0rpx;
   right: 0rpx;
   bottom: 0rpx;
   left: 0rpx;
 }
-.beforecrounded-_20rpx_::before {
+.before_crounded-_b20rpx_B::before {
   border-radius: 20rpx;
   content: var(--tw-content);
 }
-.beforecborder-2::before {
+.before_cborder-2::before {
   border-width: 2rpx;
   content: var(--tw-content);
 }
-.beforecborder-_h0000ff_::before {
+.before_cborder-_b_h0000ff_B::before {
   content: var(--tw-content);
   --tw-border-opacity: 1;
   border-color: rgba(0, 0, 255, var(--tw-border-opacity, 1));
 }
-.beforecborder-_h4bd650_::before {
+.before_cborder-_b_h4bd650_B::before {
   content: var(--tw-content);
   --tw-border-opacity: 1;
   border-color: rgba(75, 214, 80, var(--tw-border-opacity, 1));
 }
-.beforeccontent-_qmoduleA_u666eu901au5206u5305q_::before {
+.before_ccontent-_b_amoduleA_u666eu901au5206u5305_a_B::before {
   --tw-content: 'moduleA 普通分包';
   content: var(--tw-content);
 }
-.beforeccontent-_qmoduleB_u72ecu7acbu5206u5305q_::before {
+.before_ccontent-_b_amoduleB_u72ecu7acbu5206u5305_a_B::before {
   --tw-content: 'moduleB 独立分包';
   content: var(--tw-content);
 }
-.beforeccontent-_qmoduleC_u72ecu7acbu5206u5305q_::before {
+.before_ccontent-_b_amoduleC_u72ecu7acbu5206u5305_a_B::before {
   --tw-content: 'moduleC 独立分包';
   content: var(--tw-content);
 }
-.aftercml-0d5::after {
+.after_cml-0_d5::after {
   content: var(--tw-content);
   margin-left: 4rpx;
 }
-.aftercborder-none::after {
+.after_cborder-none::after {
   border-style: none;
   content: var(--tw-content);
 }
-.afterctext-red-500::after {
+.after_ctext-red-500::after {
   content: var(--tw-content);
   --tw-text-opacity: 1;
   color: rgba(239, 68, 68, var(--tw-text-opacity, 1));
 }
-.afterccontent-_xmx_::after {
+.after_ccontent-_b_q_x_q_B::after {
   --tw-content: '*';
   content: var(--tw-content);
 }
-.afterccontent-_xu7684u6492u7684u6492x_::after {
+.after_ccontent-_b_qu7684u6492u7684u6492_q_B::after {
   --tw-content: '的撒的撒';
   content: var(--tw-content);
 }
-.afterccontent-_qmq_::after {
+.after_ccontent-_b_a_x_a_B::after {
   --tw-content: '*';
   content: var(--tw-content);
 }
-.afterccontent-_qHello_Worldq_::after {
+.after_ccontent-_b_aHello_World_a_B::after {
   --tw-content: 'Hello World';
   content: var(--tw-content);
 }
-.afterccontent-_qu7684u6492u7684u6492q_::after {
+.after_ccontent-_b_au7684u6492u7684u6492_a_B::after {
   --tw-content: '的撒的撒';
   content: var(--tw-content);
 }
-.afterccontent-_m_::after {
+.after_ccontent-_b_x_B::after {
   --tw-content: *;
   content: var(--tw-content);
 }
-.dark view.darkcbg-_h123456_,
-.dark text.darkcbg-_h123456_ {
+.dark view.dark_cbg-_b_h123456_B,
+.dark text.dark_cbg-_b_h123456_B {
   --tw-bg-opacity: 1;
   background-color: rgba(18, 52, 86, var(--tw-bg-opacity, 1));
 }
-.dark view.darkcbg-green-500,
-.dark text.darkcbg-green-500 {
+.dark view.dark_cbg-green-500,
+.dark text.dark_cbg-green-500 {
   --tw-bg-opacity: 1;
   background-color: rgba(34, 197, 94, var(--tw-bg-opacity, 1));
 }
-.dark view.darkcbg-zinc-800,
-.dark text.darkcbg-zinc-800 {
+.dark view.dark_cbg-zinc-800,
+.dark text.dark_cbg-zinc-800 {
   --tw-bg-opacity: 1;
   background-color: rgba(39, 39, 42, var(--tw-bg-opacity, 1));
 }
-._n_du-count-downw_w_text_citext-red-400 .u-count-down__text {
+._b_n__du-count-down_r__r_text_B_c_etext-red-400 .u-count-down__text {
   --tw-text-opacity: 1 !important;
   color: rgba(248, 113, 113, var(--tw-text-opacity, 1)) !important;
 }
