--- a/e2e/__snapshots__/e2e/taro-app/page.wxml
+++ b/e2e/__snapshots__/e2e/taro-app/page.wxml
@@ -1,5 +1,5 @@
-<view class="relative h-12 w-12 beforecabsolute beforecinset-0 beforecborder-2 beforecborder-_h4bd650_ rounded-_20rpx_ beforecrounded-_20rpx_" style=""></view>
-<view class="relative h-12 w-12 beforecabsolute beforecinset-0 beforecborder-2 beforecborder-_h0000ff_ beforecrounded-_20rpx_ rounded-_20rpx_" style=""></view>
+<view class="relative h-12 w-12 before_cabsolute before_cinset-0 before_cborder-2 before_cborder-_b_h4bd650_B rounded-_b20rpx_B before_crounded-_b20rpx_B" style=""></view>
+<view class="relative h-12 w-12 before_cabsolute before_cinset-0 before_cborder-2 before_cborder-_b_h0000ff_B before_crounded-_b20rpx_B rounded-_b20rpx_B" style=""></view>
 <navigator
   app-id=""
   delta="1"
@@ -33,33 +33,37 @@
   独立分包
 </navigator>
 <view style="">****</view>
-<view class="w-full bg-indigo-400 bg-_urlyqhttpscssxxxdcomsxxdwebpqy_ bg-bottom bg-contain bg-no-repeat" style="">bg-_url_</view>
-<view class="text-_50px_ bg-_h3232ff_ h-_10px_ w-_20px_ text-_hfa00aa_ text-_hfa0000_ bg-_urlyqhttpscssxxxdcomsxxdwebpqy_ bg-_urlyqhttpscssyyydcomsxxdwebpqy_" style="">11</view>
-<view class="shadow-md" style="">shadow-md</view>
-<view class="form-box py-_62px_ rotate-45 px-_95px_ bg-sky-500s80 darkcbg-_h123456_" style="">py-_62px_ px-_95px_</view>
-<view hover-class="none" hover-start-time="50" hover-stay-time="400" style=""></view>
-<view class="bg-_h654321_ w-_100px_ h-_20px_" style="">123</view>
-<view class="text-_h564564_" style="">emptyImageClass</view>
-<view class="text-_h66ffff_" style="">btnClassName</view>
-<view class="aftercborder-none afterccontent-_qHello_Worldq_ a" style="">aftercborder-none</view>
-<view class="after content- aftercml-0d5 afterctext-red-500 b" style="">yellow</view>
-<view class="after content- aftercml-0d5 afterctext-red-500" style="">事实上</view>
-<view class="afterccontent-_qu7684u6492u7684u6492q_ aftercml-0d5 afterctext-red-500" style="">事实上</view>
-<view class="afterccontent-_m_ aftercml-0d5 afterctext-red-500 aspect-w-16" style="">
-  <view class="itext-_h555_" style="">aspect</view>
-  <view class="bg-_hfaf_" style="">w</view>
-  <view class="bg-_h123_" style="">16</view>
+<view class="w-full bg-indigo-400 bg-_burl_p_ahttps_c_f_fxxx_dcom_fxx_dwebp_a_P_B bg-bottom bg-contain bg-no-repeat" style="">bg-_burl_B</view>
+<view
+  class="text-_b50px_B bg-_b_h3232ff_B h-_b10px_B w-_b20px_B text-_b_hfa00aa_B text-_b_hfa0000_B bg-_burl_p_ahttps_c_f_fxxx_dcom_fxx_dwebp_a_P_B bg-_burl_p_ahttps_c_f_fyyy_dcom_fxx_dwebp_a_P_B"
+  style="">
+  11
 </view>
-<view class="bg-gray-100 darkcbg-zinc-800 h-10 w-10" hover-class="bg-red-500 darkcbg-green-500" hover-start-time="50" hover-stay-time="400" style=""></view>
-<view class="bg-_h123456_" style="">className</view>
-<view class="p-_20px_ -mt-2 mb-_-20px_" style="">p-_20px_ -mt-2 mb-_-20px_ margin的jit 可不能这么写 -m-_20px_</view>
-<view class="space-y-_1d6rem_ text-_16px_ w-_200p_" style="">
-  <view class="w-_300rpx_ text-black text-opacity-_0d19_" style="">w-_300rpx_ text-black text-opacity-_0d19_</view>
-  <view class="min-w-_300rpx_ max-h-_100px_ text-_20px_ leading-_0d9_" style="">min-w-_300rpx_ max-h-_100px_ text-_20px_ leading-_0d9_</view>
-  <view class="max-w-_300rpx_ min-h-_100px_ text-_hdddddd_" style="">max-w-_300rpx_ min-h-_100px_ text-_hdddddd_</view>
-  <view class="flex items-center justify-center h-_100px_ w-_100px_ rounded-_40px_ bg-_h123456_ bg-opacity-_0d54_ text-_hffffff_" style="">Hello</view>
-  <view class="border-_10px_ border-_h098765_ border-solid border-opacity-_0d44_" style="">border-_10px_ border-_h098765_ border-solid border-opacity-_0d44_</view>
-  <view class="grid grid-cols-3 divide-x-_10px_ divide-_h010101_ divide-solid" style="">
+<view class="shadow-md" style="">shadow-md</view>
+<view class="form-box py-_b62px_B rotate-45 px-_b95px_B bg-sky-500_f80 dark_cbg-_b_h123456_B" style="">py-_b62px_B px-_b95px_B</view>
+<view hover-class="none" hover-start-time="50" hover-stay-time="400" style=""></view>
+<view class="bg-_b_h654321_B w-_b100px_B h-_b20px_B" style="">123</view>
+<view class="text-_b_h564564_B" style="">emptyImageClass</view>
+<view class="text-_b_h66ffff_B" style="">btnClassName</view>
+<view class="after_cborder-none after_ccontent-_b_aHello_World_a_B a" style="">after_cborder-none</view>
+<view class="after content- after_cml-0_d5 after_ctext-red-500 b" style="">yellow</view>
+<view class="after content- after_cml-0_d5 after_ctext-red-500" style="">事实上</view>
+<view class="after_ccontent-_b_au7684u6492u7684u6492_a_B after_cml-0_d5 after_ctext-red-500" style="">事实上</view>
+<view class="after_ccontent-_b_x_B after_cml-0_d5 after_ctext-red-500 aspect-w-16" style="">
+  <view class="_etext-_b_h555_B" style="">aspect</view>
+  <view class="bg-_b_hfaf_B" style="">w</view>
+  <view class="bg-_b_h123_B" style="">16</view>
+</view>
+<view class="bg-gray-100 dark_cbg-zinc-800 h-10 w-10" hover-class="bg-red-500 dark_cbg-green-500" hover-start-time="50" hover-stay-time="400" style=""></view>
+<view class="bg-_b_h123456_B" style="">className</view>
+<view class="p-_b20px_B -mt-2 mb-_b-20px_B" style="">p-_b20px_B -mt-2 mb-_b-20px_B margin的jit 可不能这么写 -m-_b20px_B</view>
+<view class="space-y-_b1_d6rem_B text-_b16px_B w-_b200_v_B" style="">
+  <view class="w-_b300rpx_B text-black text-opacity-_b0_d19_B" style="">w-_b300rpx_B text-black text-opacity-_b0_d19_B</view>
+  <view class="min-w-_b300rpx_B max-h-_b100px_B text-_b20px_B leading-_b0_d9_B" style="">min-w-_b300rpx_B max-h-_b100px_B text-_b20px_B leading-_b0_d9_B</view>
+  <view class="max-w-_b300rpx_B min-h-_b100px_B text-_b_hdddddd_B" style="">max-w-_b300rpx_B min-h-_b100px_B text-_b_hdddddd_B</view>
+  <view class="flex items-center justify-center h-_b100px_B w-_b100px_B rounded-_b40px_B bg-_b_h123456_B bg-opacity-_b0_d54_B text-_b_hffffff_B" style="">Hello</view>
+  <view class="border-_b10px_B border-_b_h098765_B border-solid border-opacity-_b0_d44_B" style="">border-_b10px_B border-_b_h098765_B border-solid border-opacity-_b0_d44_B</view>
+  <view class="grid grid-cols-3 divide-x-_b10px_B divide-_b_h010101_B divide-solid" style="">
     <view style="">1</view>
     <view style="">2</view>
     <view style="">3</view>
