--- a/e2e/__snapshots__/e2e/taro-vue3-app/app.wxss
+++ b/e2e/__snapshots__/e2e/taro-vue3-app/app.wxss
@@ -249,16 +249,16 @@ text,
     max-width: 1536rpx;
   }
 }
-.-m-_20px_ {
+.-m-_b20px_B {
   margin: -20rpx;
 }
 .-mt-2 {
   margin-top: -16rpx;
 }
-.mb-_-20px_ {
+.mb-_b-20px_B {
   margin-bottom: -20rpx;
 }
-.mt-_22px_ {
+.mt-_b22px_B {
   margin-top: 22rpx;
 }
 .block {
@@ -276,19 +276,19 @@ text,
 .h-10 {
   height: 80rpx;
 }
-.h-_100px_ {
+.h-_b100px_B {
   height: 100rpx;
 }
-.h-_calcy100vh-100pxy_ {
+.h-_bcalc_p100vh-100px_P_B {
   height: calc(100vh - 100rpx);
 }
-.max-h-_100px_ {
+.max-h-_b100px_B {
   max-height: 100rpx;
 }
-.min-h-_100px_ {
+.min-h-_b100px_B {
   min-height: 100rpx;
 }
-.w-1d5 {
+.w-1_d5 {
   width: 12rpx;
 }
 .w-10 {
@@ -297,22 +297,22 @@ text,
 .w-32 {
   width: 256rpx;
 }
-.w-_100px_ {
+.w-_b100px_B {
   width: 100rpx;
 }
-.w-_300px_ {
+.w-_b300px_B {
   width: 300rpx;
 }
-.w-_300rpx_ {
+.w-_b300rpx_B {
   width: 300rpx;
 }
 .w-full {
   width: 100%;
 }
-.min-w-_300rpx_ {
+.min-w-_b300rpx_B {
   min-width: 300rpx;
 }
-.max-w-_300rpx_ {
+.max-w-_b300rpx_B {
   max-width: 300rpx;
 }
 .resize {
@@ -336,18 +336,18 @@ text,
   -ms-flex-pack: justify;
   justify-content: space-between;
 }
-.space-y-_1d6rem_ > view + view,
-.space-y-_1d6rem_ > view + text,
-.space-y-_1d6rem_ > text + view,
-.space-y-_1d6rem_ > text + text {
+.space-y-_b1_d6rem_B > view + view,
+.space-y-_b1_d6rem_B > view + text,
+.space-y-_b1_d6rem_B > text + view,
+.space-y-_b1_d6rem_B > text + text {
   --tw-space-y-reverse: 0;
   margin-bottom: calc(51.2rpx * var(--tw-space-y-reverse));
   margin-top: calc(51.2rpx * (1 - var(--tw-space-y-reverse)));
 }
-.divide-x-_10px_ > view + view,
-.divide-x-_10px_ > view + text,
-.divide-x-_10px_ > text + view,
-.divide-x-_10px_ > text + text {
+.divide-x-_b10px_B > view + view,
+.divide-x-_b10px_B > view + text,
+.divide-x-_b10px_B > text + view,
+.divide-x-_b10px_B > text + text {
   --tw-divide-x-reverse: 0;
   border-left-width: calc(10rpx * (1 - var(--tw-divide-x-reverse)));
   border-right-width: calc(10rpx * var(--tw-divide-x-reverse));
@@ -358,61 +358,61 @@ text,
 .divide-solid > text + text {
   border-style: solid;
 }
-.divide-_h010101_ > view + view,
-.divide-_h010101_ > view + text,
-.divide-_h010101_ > text + view,
-.divide-_h010101_ > text + text {
+.divide-_b_h010101_B > view + view,
+.divide-_b_h010101_B > view + text,
+.divide-_b_h010101_B > text + view,
+.divide-_b_h010101_B > text + text {
   --tw-divide-opacity: 1;
   border-color: rgba(1, 1, 1, var(--tw-divide-opacity, 1));
 }
-.rounded-_40px_ {
+.rounded-_b40px_B {
   border-radius: 40rpx;
 }
 .rounded-md {
   border-radius: 12rpx;
 }
-.border-_10px_ {
+.border-_b10px_B {
   border-width: 10rpx;
 }
 .border-solid {
   border-style: solid;
 }
-.border-_h098765_ {
+.border-_b_h098765_B {
   --tw-border-opacity: 1;
   border-color: rgba(9, 135, 101, var(--tw-border-opacity, 1));
 }
-.border-opacity-_0d44_ {
+.border-opacity-_b0_d44_B {
   --tw-border-opacity: 0.44;
 }
-.bg-_h098765_ {
+.bg-_b_h098765_B {
   --tw-bg-opacity: 1;
   background-color: rgba(9, 135, 101, var(--tw-bg-opacity, 1));
 }
-.bg-_h123456_ {
+.bg-_b_h123456_B {
   --tw-bg-opacity: 1;
   background-color: rgba(18, 52, 86, var(--tw-bg-opacity, 1));
 }
-.bg-_h543254_ {
+.bg-_b_h543254_B {
   --tw-bg-opacity: 1;
   background-color: rgba(84, 50, 84, var(--tw-bg-opacity, 1));
 }
-.bg-_h654123_ {
+.bg-_b_h654123_B {
   --tw-bg-opacity: 1;
   background-color: rgba(101, 65, 35, var(--tw-bg-opacity, 1));
 }
-.bg-_h654321_ {
+.bg-_b_h654321_B {
   --tw-bg-opacity: 1;
   background-color: rgba(101, 67, 33, var(--tw-bg-opacity, 1));
 }
-.bg-_hdbdada_ {
+.bg-_b_hdbdada_B {
   --tw-bg-opacity: 1;
   background-color: rgba(219, 218, 218, var(--tw-bg-opacity, 1));
 }
-.bg-_hfafa00_ {
+.bg-_b_hfafa00_B {
   --tw-bg-opacity: 1;
   background-color: rgba(250, 250, 0, var(--tw-bg-opacity, 1));
 }
-.bg-_hfafafa_ {
+.bg-_b_hfafafa_B {
   --tw-bg-opacity: 1;
   background-color: rgba(250, 250, 250, var(--tw-bg-opacity, 1));
 }
@@ -432,10 +432,10 @@ text,
   --tw-bg-opacity: 1;
   background-color: rgba(127, 29, 29, var(--tw-bg-opacity, 1));
 }
-.bg-opacity-_0d54_ {
+.bg-opacity-_b0_d54_B {
   --tw-bg-opacity: 0.54;
 }
-.bg-_urlyqhttpscssxxxdcomsxxdwebpqy_ {
+.bg-_burl_p_ahttps_c_f_fxxx_dcom_fxx_dwebp_a_P_B {
   background-image: url(https://xxx.com/xx.webp);
 }
 .bg-gradient-to-r {
@@ -443,15 +443,15 @@ text,
   background-image: -webkit-linear-gradient(left, var(--tw-gradient-stops));
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
-.from-_h123456_ {
+.from-_b_h123456_B {
   --tw-gradient-from: #123456 var(--tw-gradient-from-position);
   --tw-gradient-to: rgba(18, 52, 86, 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
-.to-_h654321_ {
+.to-_b_h654321_B {
   --tw-gradient-to: #654321 var(--tw-gradient-to-position);
 }
-.p-_20px_ {
+.p-_b20px_B {
   padding: 20rpx;
 }
 .py-2 {
@@ -461,43 +461,43 @@ text,
 .text-center {
   text-align: center;
 }
-.text-_20px_ {
+.text-_b20px_B {
   font-size: 20rpx;
 }
-.text-_50px_ {
+.text-_b50px_B {
   font-size: 50rpx;
 }
 .font-semibold {
   font-weight: 600;
 }
-.leading-_0d9_ {
+.leading-_b0_d9_B {
   line-height: 0.9;
 }
-.text-_h123456_ {
+.text-_b_h123456_B {
   --tw-text-opacity: 1;
   color: rgba(18, 52, 86, var(--tw-text-opacity, 1));
 }
-.text-_haaaaaa_ {
+.text-_b_haaaaaa_B {
   --tw-text-opacity: 1;
   color: rgba(170, 170, 170, var(--tw-text-opacity, 1));
 }
-.text-_hdddddd_ {
+.text-_b_hdddddd_B {
   --tw-text-opacity: 1;
   color: rgba(221, 221, 221, var(--tw-text-opacity, 1));
 }
-.text-_hfafafa_ {
+.text-_b_hfafafa_B {
   --tw-text-opacity: 1;
   color: rgba(250, 250, 250, var(--tw-text-opacity, 1));
 }
-.text-_hffffff_ {
+.text-_b_hffffff_B {
   --tw-text-opacity: 1;
   color: rgba(255, 255, 255, var(--tw-text-opacity, 1));
 }
-.text-_blue_ {
+.text-_bblue_B {
   --tw-text-opacity: 1;
   color: rgba(0, 0, 255, var(--tw-text-opacity, 1));
 }
-.text-_red_ {
+.text-_bred_B {
   --tw-text-opacity: 1;
   color: rgba(255, 0, 0, var(--tw-text-opacity, 1));
 }
@@ -517,7 +517,7 @@ text,
   --tw-text-opacity: 1;
   color: rgba(255, 255, 255, var(--tw-text-opacity, 1));
 }
-.text-opacity-_0d19_ {
+.text-opacity-_b0_d19_B {
   --tw-text-opacity: 0.19;
 }
 .ring-4 {
@@ -530,20 +530,20 @@ text,
   --tw-ring-opacity: 1;
   --tw-ring-color: rgba(249, 168, 212, var(--tw-ring-opacity, 1));
 }
-.afterccontent-_qu6211u77e5u9053u6211u5fc3bu6c38u605212we_dsq_::after {
+.after_ccontent-_b_au6211u77e5u9053u6211u5fc3_mu6c38u605212we_ds_a_B::after {
   --tw-content: '我知道我心,永恒12we ds';
   content: var(--tw-content);
 }
 @media (prefers-color-scheme: dark) {
-  .darkcbg-_h487512_ {
+  .dark_cbg-_b_h487512_B {
     --tw-bg-opacity: 1;
     background-color: rgba(72, 117, 18, var(--tw-bg-opacity, 1));
   }
-  .darkcbg-_habcdef_ {
+  .dark_cbg-_b_habcdef_B {
     --tw-bg-opacity: 1;
     background-color: rgba(171, 205, 239, var(--tw-bg-opacity, 1));
   }
-  .darkcbg-zinc-800 {
+  .dark_cbg-zinc-800 {
     --tw-bg-opacity: 1;
     background-color: rgba(39, 39, 42, var(--tw-bg-opacity, 1));
   }
