--- a/e2e/__snapshots__/e2e/taro-webpack-tailwindcss-v4/page.wxml
+++ b/e2e/__snapshots__/e2e/taro-webpack-tailwindcss-v4/page.wxml
@@ -1,4 +1,4 @@
-<view class="bg-_h534312_ text-_hfff_ text-_100rpx_" style=""><text space="" style=""></text></view>
+<view class="bg-_b_h534312_B text-_b_hfff_B text-_b100rpx_B" style=""><text space="" style=""></text></view>
 <view class="bg-purple-800 text-pink-200" style="">11</view>
 <view class="h-14 bg-gradient-to-r from-cyan-500 to-blue-500" style=""></view>
 <view class="nut-button nut-button-default nut-button-normal nut-button-round nut-button-round-normal" style="">
