--- a/e2e/__snapshots__/e2e/uni-app/page.wxml
+++ b/e2e/__snapshots__/e2e/uni-app/page.wxml
@@ -1,52 +1,55 @@
 <view>
-  <view class="ifdef-_MP-WEIXIN_cbg-blue-500 ifdef-_MP-WEIXIN_cbg-blue-500">bg-blue-500</view>
-  <view class="ifdef-_H5_uu_MP-WEIXIN_cbg-blue-300 ifdef-_H5_uu_MP-WEIXIN_cbg-blue-300">bg-blue-300</view>
-  <view class="ifdef-_H5uuMP-WEIXIN_cbg-blue-400 ifdef-_H5uuMP-WEIXIN_cbg-blue-400">bg-blue-400</view>
-  <view class="ifndef-_MP-WEIXIN_cbg-red-500 ifndef-_MP-WEIXIN_cbg-red-500">not bg-red-500</view>
-  <view class="ifndef-_H5uuMP-WEIXIN_cbg-red-400 ifndef-_H5uuMP-WEIXIN_cbg-red-400">bg-red-400</view>
-  <view class="wxcbg-blue-400 wxcbg-blue-400">wx:bg-blue-400</view>
-  <view class="-wxcbg-red-400 -wxcbg-red-400">-wx:bg-red-400</view>
-  <view class="mvcbg-blue-400 mvcbg-blue-400">mv:bg-blue-400</view>
-  <view class="-mvcbg-red-400 -mvcbg-red-400">-mv:bg-red-400</view>
+  <view class="ifdef-_bMP-WEIXIN_B_cbg-blue-500 ifdef-_bMP-WEIXIN_B_cbg-blue-500">bg-blue-500</view>
+  <view class="ifdef-_bH5__o_o_MP-WEIXIN_B_cbg-blue-300 ifdef-_bH5__o_o_MP-WEIXIN_B_cbg-blue-300">bg-blue-300</view>
+  <view class="ifdef-_bH5_o_oMP-WEIXIN_B_cbg-blue-400 ifdef-_bH5_o_oMP-WEIXIN_B_cbg-blue-400">bg-blue-400</view>
+  <view class="ifndef-_bMP-WEIXIN_B_cbg-red-500 ifndef-_bMP-WEIXIN_B_cbg-red-500">not bg-red-500</view>
+  <view class="ifndef-_bH5_o_oMP-WEIXIN_B_cbg-red-400 ifndef-_bH5_o_oMP-WEIXIN_B_cbg-red-400">bg-red-400</view>
+  <view class="wx_cbg-blue-400 wx_cbg-blue-400">wx:bg-blue-400</view>
+  <view class="-wx_cbg-red-400 -wx_cbg-red-400">-wx:bg-red-400</view>
+  <view class="mv_cbg-blue-400 mv_cbg-blue-400">mv:bg-blue-400</view>
+  <view class="-mv_cbg-red-400 -mv_cbg-red-400">-mv:bg-red-400</view>
   <view>* 1 * 2 * 3 ****</view>
   <view>****</view>
   <view class="ab ab text-left text-left _div _div">111</view>
   <label class="pp pp text-xs text-xs _span _span text-left text-left">222</label>
-  <view class="bg-inherit bg-inherit aftercborder-none aftercborder-none afterccontent-_qHello_Worldq_ afterccontent-_qHello_Worldq_">after:border-none</view>
-  <view class="text-_h999999_ text-_h999999_ darkctext-white darkctext-white" hover-class="text-_h444444_">dark mode</view>
-  <view class="bg-_h123456_ bg-_h123456_ text-_hfff123_ text-_hfff123_">bg-[#123456]</view>
-  <view class="text-_h654321_ text-_h654321_ bg-_h123456_ bg-_h123456_">className</view>
+  <view class="bg-inherit bg-inherit after_cborder-none after_cborder-none after_ccontent-_b_aHello_World_a_B after_ccontent-_b_aHello_World_a_B">after:border-none</view>
+  <view class="text-_b_h999999_B text-_b_h999999_B dark_ctext-white dark_ctext-white" hover-class="text-_b_h444444_B">dark mode</view>
+  <view class="bg-_b_h123456_B bg-_b_h123456_B text-_b_hfff123_B text-_b_hfff123_B">bg-[#123456]</view>
+  <view class="text-_b_h654321_B text-_b_h654321_B bg-_b_h123456_B bg-_b_h123456_B">className</view>
   <view class="bg-black bg-black h-10 h-10 w-10 w-10" hover-class="h-20 w-20">dark mode</view>
   <layout is="components/tailwind/Layout">
-    <view class="beforeccontent-_qhelloq_ Layout--beforeccontent-_qhelloq_ beforecblock Layout--beforecblock _div Layout--_div">
-      <view class="text-_22px_ Layout--text-_22px_">对酒当歌，人生几何</view>
-      <view class="ih-5 Layout--ih-5 w-5 Layout--w-5 shadow-_0px_2px_11px_0px_rgbay0b0b0b0d4y_ Layout--shadow-_0px_2px_11px_0px_rgbay0b0b0b0d4y_"></view>
-      <view class="h-5 Layout--h-5 w-5 Layout--w-5 shadow-_0px_2px_11px_0px_h00000a_ Layout--shadow-_0px_2px_11px_0px_h00000a_"></view>
+    <view class="before_ccontent-_b_ahello_a_B Layout--before_ccontent-_b_ahello_a_B before_cblock Layout--before_cblock _div Layout--_div">
+      <view class="text-_b22px_B Layout--text-_b22px_B">对酒当歌，人生几何</view>
+      <view class="_eh-5 Layout--_eh-5 w-5 Layout--w-5 shadow-_b0px_2px_11px_0px_rgba_p0_m0_m0_m0_d4_P_B Layout--shadow-_b0px_2px_11px_0px_rgba_p0_m0_m0_m0_d4_P_B"></view>
+      <view class="h-5 Layout--h-5 w-5 Layout--w-5 shadow-_b0px_2px_11px_0px__h00000a_B Layout--shadow-_b0px_2px_11px_0px__h00000a_B"></view>
       <view>classObject</view>
-      <view class="bg-_hfafa00_ Layout--bg-_hfafa00_">Toggle</view>
+      <view class="bg-_b_hfafa00_B Layout--bg-_b_hfafa00_B">Toggle</view>
       <view>Toggle</view>
       <button data-event-opts="tap,e0,$event" role="button" aria-disabled="false">Toggle flag</button>
-      <view class="p-_20px_ Layout--p-_20px_ -mt-2 Layout---mt-2 mb-_-20px_ Layout--mb-_-20px_ h-_200p_ Layout--h-_200p_">
+      <view class="p-_b20px_B Layout--p-_b20px_B -mt-2 Layout---mt-2 mb-_b-20px_B Layout--mb-_b-20px_B h-_b200_v_B Layout--h-_b200_v_B">
         p-[20px] -mt-2 mb-[-20px] margin的jit 可不能这么写 -m-[20px]
       </view>
-      <view class="space-y-_1d6rem_ Layout--space-y-_1d6rem_">
-        <view class="w-_300rpx_ Layout--w-_300rpx_ text-black Layout--text-black text-opacity-_0d19_ Layout--text-opacity-_0d19_">w-[300rpx] text-black text-opacity-[0.19]</view>
-        <view class="min-w-_300rpx_ Layout--min-w-_300rpx_ max-h-_100px_ Layout--max-h-_100px_ text-_20px_ Layout--text-_20px_ leading-_0d9_ Layout--leading-_0d9_">
+      <view class="space-y-_b1_d6rem_B Layout--space-y-_b1_d6rem_B">
+        <view class="w-_b300rpx_B Layout--w-_b300rpx_B text-black Layout--text-black text-opacity-_b0_d19_B Layout--text-opacity-_b0_d19_B">
+          w-[300rpx] text-black text-opacity-[0.19]
+        </view>
+        <view
+          class="min-w-_b300rpx_B Layout--min-w-_b300rpx_B max-h-_b100px_B Layout--max-h-_b100px_B text-_b20px_B Layout--text-_b20px_B leading-_b0_d9_B Layout--leading-_b0_d9_B">
           min-w-[300rpx] max-h-[100px] text-[20px] leading-[0.9]
         </view>
-        <view class="max-w-_300rpx_ Layout--max-w-_300rpx_ min-h-_100px_ Layout--min-h-_100px_ text-_hdddddd_ Layout--text-_hdddddd_">
+        <view class="max-w-_b300rpx_B Layout--max-w-_b300rpx_B min-h-_b100px_B Layout--min-h-_b100px_B text-_b_hdddddd_B Layout--text-_b_hdddddd_B">
           max-w-[300rpx] min-h-[100px] text-[#dddddd]
         </view>
         <view
-          class="flex Layout--flex items-center Layout--items-center justify-center Layout--justify-center h-_100px_ Layout--h-_100px_ w-_100px_ Layout--w-_100px_ rounded-_40px_ Layout--rounded-_40px_ bg-_h123456_ Layout--bg-_h123456_ bg-opacity-_0d54_ Layout--bg-opacity-_0d54_ text-_hffffff_ Layout--text-_hffffff_">
+          class="flex Layout--flex items-center Layout--items-center justify-center Layout--justify-center h-_b100px_B Layout--h-_b100px_B w-_b100px_B Layout--w-_b100px_B rounded-_b40px_B Layout--rounded-_b40px_B bg-_b_h123456_B Layout--bg-_b_h123456_B bg-opacity-_b0_d54_B Layout--bg-opacity-_b0_d54_B text-_b_hffffff_B Layout--text-_b_hffffff_B">
           Hello
         </view>
         <view
-          class="border-_10px_ Layout--border-_10px_ border-_h098765_ Layout--border-_h098765_ border-solid Layout--border-solid border-opacity-_0d44_ Layout--border-opacity-_0d44_">
+          class="border-_b10px_B Layout--border-_b10px_B border-_b_h098765_B Layout--border-_b_h098765_B border-solid Layout--border-solid border-opacity-_b0_d44_B Layout--border-opacity-_b0_d44_B">
           border-[10px] border-[#098765] border-solid border-opacity-[0.44]
         </view>
         <view
-          class="grid Layout--grid grid-cols-3 Layout--grid-cols-3 divide-x-_10px_ Layout--divide-x-_10px_ divide-_h010101_ Layout--divide-_h010101_ divide-solid Layout--divide-solid">
+          class="grid Layout--grid grid-cols-3 Layout--grid-cols-3 divide-x-_b10px_B Layout--divide-x-_b10px_B divide-_b_h010101_B Layout--divide-_b_h010101_B divide-solid Layout--divide-solid">
           <view class="_div Layout--_div">1</view>
           <view class="_div Layout--_div">2</view>
           <view class="_div Layout--_div">3</view>
